Added some changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="aboutme">
         <h2>İş təcrübəsi</h2>
         <p>
-            Men özümüzün aile işide satıcı kimi islemisem ve daha sonra xərclərin və gəlirlərin hesabını aparırdım.
+            Men özümüzün ailə işidə satıcı kimi işləmişəm ve daha sonra xərclərin və gəlirlərin hesabını aparırdım.
         </p>
         <p>Iyun 2017 - Dekabr 2022</p>
       </div>
