Added some changes

--- a/index.html
+++ b/index.html
@@ -46,10 +46,19 @@
       
       <div class="aboutme">
         <h2>İş təcrübəsi</h2>
-        <p>
-            Men özümüzün ailə işidə satıcı kimi işləmişəm ve daha sonra xərclərin və gəlirlərin hesabını aparırdım.
-        </p>
-        <p>Iyun 2017 - Dekabr 2022</p>
+        <ol>
+          <li>
+            <p><strong>Anbardar</strong></p>
+            <p>Məhsulların topdan satışı üçün anbar</p>
+            <p>Iyul 2017 - Mart 2020</p>
+          </li>
+          <br>
+          <li>
+        <p><strong>Satıcı</strong></p>
+        <p>"Sweet House" - Şirniyyat məmulatları satan mağaza</p>
+        <p>Yanvar 2021 - Dekabr 2022</p>
+          </li>
+        </ol>
       </div>
 
       <hr size="3" color="black" />
